--- a/your-code/main_esp.ipynb
+++ b/your-code/main_esp.ipynb
@@ -31,7 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu solución aquí"
+    "lista_consecutiva = [i for i in range(1, 51)]\n",
+    "\n",
+    "print(lista_consecutiva)"
    ]
   },
   {
@@ -47,7 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu solución aquí"
+    "lista_pares = [i for i in range(2, 201) if i % 2 == 0]\n",
+    "\n",
+    "print(lista_pares)"
    ]
   },
   {
@@ -81,7 +85,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu solución aquí"
+    "# Usar una comprensión de lista para aplanar el array 'a'\n",
+    "lista_aplanada = [elemento for fila in a for elemento in fila]\n",
+    "\n",
+    "print(lista_aplanada)"
    ]
   },
   {
@@ -195,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
@@ -204,5 +211,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
